After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 129444 - cells with linebreaks are not printed correctly
cells with linebreaks are not printed correctly
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Printing
1.2.x
Other Linux
: Immediate blocker
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-12-16 10:48 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Frederic Parrenin 2003-12-16 10:48:34 UTC
If you insert a linebreak in a cell (with Alt-Enter), it is printed as a
small square (and there is no linebreak).
I don't know if it comes from gnumeric or gnome-print. Anyway, the
developpers are the same ;-)
Comment 1 Jody Goldberg 2003-12-18 00:57:43 UTC
It's going to be a busy night.
Comment 2 Andreas J. Guelzow 2003-12-21 20:41:19 UTC
fixed in cvs

imho gnome-print should have a gnome_print_draw_layout similar to
gdk_draw_layout and we could just reuse the display code